--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -1,1 +1,9 @@
-body{padding-top:0;background:#fff}body>.container{padding-top:20px;border:1px solid #ddd;box-shadow:0 10px 8px -6px #ccc}
+body {
+  padding-top: 0px;
+  background: #fff;
+}
+body>.container {
+  padding-top: 20px;
+  border: 1px solid #ddd;
+  box-shadow: 0 10px 8px -6px #ccc;
+}
