--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -5,5 +5,5 @@ body {
 body>.container {
   padding-top: 20px;
   border: 1px solid #ddd;
-  box-shadow: 0 10px 8px -6px #ccc;
+  box-shadow: 0 10px 8px -6px #ccd;
 }
